@@ -1,5 +1,13 @@
 2007-11-07  Dan Williams  <dcbw@redhat.com>
 
+	* src/gconf-helpers/gconf-helpers.c
+	  src/gconf-helpers/gconf-upgrade.c
+		- (nm_gconf_migrate_0_7_vpn_connections, nm_gconf_get_all_connections):
+			update the service_type key name to service-type due to NMSetting
+			changes
+
+2007-11-07  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet.glade
 		- Add a generic alert dialog
 
